--- a/www/templates/artist/list.html
+++ b/www/templates/artist/list.html
@@ -3,7 +3,6 @@
         <div class="row subtitle filter" scroll="false">
             <div class="col col-100">
                 <input type="search"
-                       placeholder="Filter artists..."
                        ng-model="view.search"
                        ng-focus="searchFocused = true"
                        ng-blur="searchFocused = false"
@@ -12,19 +11,21 @@
                 <button ng-if="view.search.length"
                         class="button button-icon ion-close input-button"
                         ng-click="view.search = '' "> </button>
+                <button ng-if="!view.search.length"
+                        class="button button-icon ion-search input-button"> </button>
             </div>
         </div>
         <div class="listed" scroll="true">
             <ion-list>
                 <ion-item class="my-item"
-                          ng-repeat="item in getContacts() | filter:view.search"
+                          ng-repeat="item in getArtists() | filter:view.search"
                           item-height="getItemHeight(item)"
                           id="{{ item.isLetter ? (item.letter + '_divider') : item.id}}"
                           ng-style="{'line-height': getItemHeight(item) + 'px'}"
                           ng-class="{'item-divider': item.isLetter}"
                           ng-click="showDetail({{ item.isLetter ? 0 : item.id}})">
-                    <img ng-if="!item.isLetter" ng-src="http://placehold.it/80x80">
-                    <p>{{item.letter || (item.first_name+' '+item.last_name)}}</p>
+                    <img ng-if="!item.isLetter" ng-src="{{view.server_image}}artists/{{item.id}}/100/{{item.image_profile}}" alt="item.name">
+                    <p>{{item.letter || item.name|parseName}}</p>
                     <button ng-if="!item.isLetter" class="button button-clear favorite">
                         <img src="img/favorite/off.png">
                     </button>
