--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -1,17 +1,18 @@
-<ion-side-menus enable-menu-with-back-views="false">
-    <ion-side-menu-content>
-        <ion-nav-bar class="bar-light">
-            <ion-nav-back-button>
-            </ion-nav-back-button>
-
-            <ion-nav-title>
-                <div class="logo">
-                    <img src="img/festival_arts.png">
-                </div>
-            </ion-nav-title>
-        </ion-nav-bar>
-        <ion-nav-view name="content"></ion-nav-view>
-    </ion-side-menu-content>
-
-</ion-side-menus>
+<ion-view class="login">
+    <ion-header-bar class="login-header" scroll="false">
+        <div class="row header-tabs" scroll="false">
+            <div class="left" ng-class="{'active': view.show  === 'sign_in'}">
+                <button class="button button-clear btn-action" ng-click="login()">
+                    Entrar
+                </button>
+            </div>
+            <div class="right" ng-class="{'active': view.show  === 'sign_up'}">
+                <button class="button button-clear btn-action" ng-click="register()">
+                    Registrarse
+                </button>
+            </div>
+        </div>
+    </ion-header-bar>
+    <ion-nav-view name="content"></ion-nav-view>
+</ion-view>
 
