--- a/www/templates/coolway/main.html
+++ b/www/templates/coolway/main.html
@@ -8,7 +8,7 @@
             </div>
             <div class="row">
                 <div class="col left">
-                    <img src="img/coolway/left.png">
+                    <img src="img/coolway/left.png" ng-click="openPage('BROWSER','http://www.coolway.com')">
                 </div>
                 <div class="col center">
                     <img src="img/coolway/night_time.png">
@@ -19,13 +19,13 @@
             </div>
             <div class="row">
                 <div class="col col-100 social-network">
-                    <a class="social">
+                    <a class="social" ng-click="openPage('FACEBOOK', 'https://www.facebook.com/CoolwaySpain')">
                         <img src="img/coolway/social-network/facebook.png">
                     </a>
-                    <a class="social center">
+                    <a class="social center" ng-click="openPage('TWITTER','https://twitter.com/coolwayspain')">
                         <img src="img/coolway/social-network/twitter.png">
                     </a>
-                    <a class="social">
+                    <a class="social" ng-click="openPage('INSTAGRAM','https://www.instagram.com/coolway_spain/')" >
                         <img src="img/coolway/social-network/instagram.png">
                     </a>
                 </div>
