--- a/www/templates/schedule/main.html
+++ b/www/templates/schedule/main.html
@@ -1,6 +1,6 @@
 <ion-view>
     <ion-content has-bouncing="true" scroll="false" class="bg-dark schedule">
-        <div class="row subtitle" scroll="false">
+        <div class="row subtitle filter" scroll="false">
             <div class="col col-100">
                 <!--<div class="landscape">-->
                     <!--<button class="button button-clear">-->
@@ -38,6 +38,19 @@
         </div>
         <div class="row" scroll="true">
             <ion-list class="list">
+                <ion-item>
+                    <div class="left">
+                        <img ng-src="http://placehold.it/80x80" class="artist-cover">
+                    </div>
+                    <div class="center">
+                        <p class="artist-name">Perros</p>
+                        <p class="time"> <i class="ion-clock"> </i> 18:00 - 29:00</p>
+                        <p class="stage-name"> <i class="ion-location"> Escenario Central</i></p>
+                    </div>
+                    <div class="right">
+                        <img src="img/favorite/on.png">
+                    </div>
+                </ion-item>
                 <ion-item>
                     <div class="left">
                         <img ng-src="http://placehold.it/80x80" class="artist-cover">
