--- a/www/templates/ticket/main.html
+++ b/www/templates/ticket/main.html
@@ -1,8 +1,13 @@
 <ion-view>
-    <ion-content scroll="false">
-        <iframe width="100%" frameborder="0" id="tkt-iframe" scrolling="no"
+    <ion-content scroll="false" class="ticket">
+        <iframe width="100%" height="500px" frameborder="0" id="tkt-iframe" scrolling="no"
                 src="https://www.ticketea.com/entradas-festival-les-arts-2016/custom/"
                 style="overflow: hidden; height: 564px;">
         </iframe>
+        <div class="partner">
+            <a href="//www.ticketea.com/entradas-festival-les-arts-2016/" alt="Festival de les Arts 2016" title="ticketea">
+                <img src="img/ticket/powered_by.png" alt="ticketea" />
+            </a>
+        </div>
     </ion-content>
 </ion-view>
