--- a/www/templates/user/favorites.html
+++ b/www/templates/user/favorites.html
@@ -8,7 +8,13 @@
     </div>
     <div ng-if="!view.favorites.length">
         <ion-content class="not-found" scroll="false">
-            <img src="img/menu/favorite.png">
+            <div class="image">
+                <img src="img/favorite/off.png">
+            </div>
+            <div class="text">
+                <p>Aún no tienes favoritos</p>
+                <small>Añadelos con los botones de corazón en el listado de artistas o en los horarios.</small>
+            </div>
         </ion-content>
     </div>
 </ion-view>
