--- a/www/templates/menu/left.html
+++ b/www/templates/menu/left.html
@@ -1,50 +1,51 @@
 <ion-view>
-    <div class="powered-by">
-        <img src="img/menu/coolway_powered.png">
-    </div>
-    <div class="header-left-menu" menu-close ui-sref="menu.artist-discover">
-        <img src="img/menu/festival_arts.png">
-    </div>
+    <ion-content has-bouncing="true">
+        <div class="powered-by">
+            <img src="img/menu/coolway_powered.png">
+        </div>
+        <div class="header-left-menu" menu-close ui-sref="menu.artist-discover">
+            <img src="img/menu/festival_arts.png">
+        </div>
 
-    <button class="button button-clear category" menu-close ui-sref="menu.artist-list">
-        <img src="img/menu/category/artist.png">
-        <a>Artistas</a>
-    </button>
-    <button class="button button-clear category">
-        <img src="img/menu/category/poster.png">
-        <a>Cartel</a>
-    </button>
-    <button class="button button-clear category" menu-close ui-sref="menu.schedule">
-        <img src="img/menu/category/schedule.png">
-        <a>Horarios</a>
-    </button>
-    <button class="button button-clear category">
-        <img src="img/menu/category/map.png">
-        <a>Mapas</a>
-    </button>
-    <button class="button button-clear category" menu-close ui-sref="menu.ticket" >
-        <img src="img/menu/category/ticket.png">
-        <a>Entradas</a>
-    </button>
-    <!--<button class="button button-clear category" menu-close ui-sref="menu.streaming">-->
-        <!--<img src="img/menu/category/streaming.png">-->
-        <!--<a>Streaming</a>-->
-    <!--</button>-->
-    <button class="button button-clear category" menu-close ui-sref="menu.info">
-        <img src="img/menu/category/info.png">
-        <a>Info</a>
-    </button>
-    <button class="button button-clear category">
-        <img src="img/menu/category/social.png">
-        <a>Social</a>
-    </button>
-    <button class="button button-clear category" menu-close ui-sref="menu.coolway">
-        <img src="img/menu/category/coolway.png">
-        <a>Coolway</a>
-    </button>
+        <button class="button button-clear category" menu-close ui-sref="menu.artist-list">
+            <img src="img/menu/category/artist.png">
+            <a>Artistas</a>
+        </button>
+        <button class="button button-clear category" menu-close ui-sref="menu.poster">
+            <img src="img/menu/category/poster.png">
+            <a>Cartel</a>
+        </button>
+        <button class="button button-clear category" menu-close ui-sref="menu.schedule">
+            <img src="img/menu/category/schedule.png">
+            <a>Horarios</a>
+        </button>
+        <button class="button button-clear category" menu-close ui-sref="menu.map">
+            <img src="img/menu/category/map.png">
+            <a>Mapas</a>
+        </button>
+        <button class="button button-clear category" menu-close ui-sref="menu.ticket" >
+            <img src="img/menu/category/ticket.png">
+            <a>Entradas</a>
+        </button>
+        <!--<button class="button button-clear category" menu-close ui-sref="menu.streaming">-->
+            <!--<img src="img/menu/category/streaming.png">-->
+            <!--<a>Streaming</a>-->
+        <!--</button>-->
+        <button class="button button-clear category" menu-close ui-sref="menu.info">
+            <img src="img/menu/category/info.png">
+            <a>Info</a>
+        </button>
+        <button class="button button-clear category" menu-close ui-sref="menu.social">
+            <img src="img/menu/category/social.png">
+            <a>Social</a>
+        </button>
+        <button class="button button-clear category" menu-close ui-sref="menu.coolway">
+            <img src="img/menu/category/coolway.png">
+            <a>Coolway</a>
+        </button>
 
-    <div class="footer-left-menu">
-        <img src="img/menu/the_night_time.png">
-    </div>
-
+        <div class="footer-left-menu">
+            <img src="img/menu/the_night_time.png">
+        </div>
+    </ion-content>
 </ion-view>
