--- a/www/templates/user/sign_up.html
+++ b/www/templates/user/sign_up.html
@@ -25,8 +25,7 @@
         </div>
         <div class="login-footer">
             <img src="img/login/sign-up.png" ng-click="signUp()">
-            <a>T&eacute;rminos y condiciones</a>
-            <a>Politica de privacidad</a>
+            <a ng-click="openLink('http://www.festivaldelesarts.com/wp-content/uploads/2015/10/Condiciones_Generales_Arts_2016.pdf')">T&eacute;rminos y condiciones</a>
         </div>
     </div>
 
